--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     const encryptedIdPrefix = 'ABCD';
     and then you can share those IDs instead: 1234, 5678
     */
-    const encryptedIdPrefix = '';
+    const encryptedIdPrefix = 'd2hpdGUtZmlyZS0zMDBjLmxlbWluaHk4OS53b3JrZXJzLmRldg==';
 
     /* if you don't want to use rclone OAuth credentials you can always use your own */
     const defaultClientId = '';
