--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
   </style>
 </head>
 
-<body>
-  <script type="text/javascript">
-    document.body.classList.add("dark");
-  </script>
+<body class="dark">
   <nav class="navbar navbar-expand navbar-dark">
     <div class="container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
