--- a/index.html
+++ b/index.html
@@ -279,6 +279,10 @@
         </div>
         <div class="modal-body">
           <h5>Video instructions</h5>
+          <p><iframe style="width: 100%; aspect-ratio: 16 / 9;" src="https://www.youtube.com/embed/npwP6rQNbOg"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe></p>
         </div>
       </div>
     </div>
